--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
+                        <a class="nav-link phone-number" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
                     </li>
                 </ul>
             </div>
@@ -43,7 +43,9 @@
         <div class="header-text container">
             <h1>The Pet Shop</h1>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus sunt molestiae voluptatum odit, incidunt eligendi quidem <br> distinctio in, consectetur enim necessitatibus excepturi cumque ipsa cupiditate voluptatibus corrupti eum quibusdam dolore?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus sunt molestiae <br> 
+                voluptatum odit, incidunt eligendi quidem distinctio in, consectetur enim necessitatibus <br>
+                excepturi cumque ipsa cupiditate voluptatibus corrupti eum quibusdam dolore?
             </p>
 
             <a class="#" href="#">Shop Now</a>
@@ -51,7 +53,7 @@
     </header>
 
     <main>
-        <section class="container" id="feature-section">
+        <section id="feature-section" class="container">
             <h2>Our Featured Pets</h2>
             <a href="#">Dogs</a>
             <a href="#">Cats</a>
@@ -66,21 +68,21 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/alan.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <img src="img/henry-sue.jpg" class="d-block w-100 img-fluid" alt="a dog and cat">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>First slide label</h5>
                       <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/charles.jpg" class="d-block w-100" alt="...">
+                    <img src="img/blue-tiger.jpg" class="d-block w-100" alt="a dog and cat">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Second slide label</h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="img/ernesto.jpg" class="d-block w-100" alt="...">
+                    <img src="img/jayjay.jpg" class="d-block w-100" alt="a dog">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Third slide label</h5>
                       <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -97,38 +99,105 @@
                 </a>
               </div>
 
-              <p>
+              <p class="text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
                   Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
               </p>
         </section>
 
-        <section id="">
+        <section id="best-section">
+           <div class="container">
             <h2>Why We Are The Best</h2>
+                <div class="row">
+                    <div class=" col-lg-4 best-text-section">
+                        <div class="icon">
+                            <i class="fas fa-concierge-bell"></i>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
+                        </p>
+                    </div>
+                    <div class="col-lg-4 best-text-section">
+                        <div class="icon">
+                            <i class="fas fa-dollar-sign"></i>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
+                        </p>
+                    </div>
+                    <div class="col-lg-4 best-text-section">
+                        <div class="icon">
+                            <i class="fas fa-stethoscope"></i>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
+                        </p>
+                    </div>
+                </div>
+           </div>
+        </section>
 
-            <div class="">
-                <div class="icon">
-                    <i class="fas fa-concierge-bell"></i>
+        <section id="offer-section">
+            <h2>We Also Offer</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="offer-img col-lg-4">
+                        <img class="img-fluid" src="img/grooming.png" alt="scissors icon">
+                    </div>
+
+                    <div class="offer-img col-lg-4">
+                        <img src="img/training.png" alt="graduation cap">
+                    </div>
+
+                    <div class="offer-img col-lg-4">
+                        <img src="img/veterinary.png" alt="first aid kit">
+                    </div>
                 </div>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
-                </p>
             </div>
-            <div class="">
-                <div class="icon">
-                    <i class="fas fa-dollar-sign"></i>
+        </section>
+
+        <section id="location-section">
+            <div class="container">
+                <h2>Location</h2>
+                <div class="row d-flex justify-content-around">
+                    <div class="col-lg-4">
+                        <p>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <strong>555 Bruce way</strong><br>
+                            Cincinnati Oh, 45238 <br>
+                            (513)555-7865
+                            <br><br>
+                            Mon - Fri: 9am - 8pm <br>
+                            Saturday: 10am - 9pm <br>
+                            Sunday: Closed
+                        </p>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <p>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <strong>555 Bruce way</strong><br>
+                            Cincinnati Oh, 45238 <br>
+                            (513)555-7865
+                            <br><br>
+                            Mon - Fri: 9am - 8pm <br>
+                            Saturday: 10am - 9pm <br>
+                            Sunday: Closed
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                        <p>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <strong>555 Bruce way</strong><br>
+                            Cincinnati Oh, 45238 <br>
+                            (513)555-7865
+                            <br><br>
+                            Mon - Fri: 9am - 8pm <br>
+                            Saturday: 10am - 9pm <br>
+                            Sunday: Closed
+                        </p>
+                    </div>
                 </div>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
-                </p>
-            </div>
-            <div class="">
-                <div class="icon">
-                    <i class="fas fa-stethoscope"></i>
-                </div>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
-                </p>
             </div>
         </section>
     </main>
