--- a/index.html
+++ b/index.html
@@ -48,16 +48,34 @@
                 excepturi cumque ipsa cupiditate voluptatibus corrupti eum quibusdam dolore?
             </p>
 
-            <a class="#" href="#">Shop Now</a>
+            <a class="cta" href="#">Shop Now</a>
         </div>
     </header>
 
     <main>
         <section id="feature-section" class="container">
             <h2>Our Featured Pets</h2>
-            <a href="#">Dogs</a>
-            <a href="#">Cats</a>
-            <a href="#">Birds</a>
+            <!-- <div class="container">
+                <div class="row justify-content-around text-center">
+                    <div class="col-lg-4">
+                        <a class="cta" href="#">Dogs</a>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <a class="cta" href="#">Cats</a>
+                    </div>
+
+                    <div class="col-lg-4">
+                        <a class="cta" href="#">Birds</a>
+                    </div>
+                </div>
+            </div> -->
+
+            <!-- start of paw print-->
+            <div class="paw-print">
+                <i class="fas fa-paw"></i>
+            </div>
+            <!-- end of paw print-->
 
             <!-- carousel -->
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -97,7 +115,7 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
-              </div>
+            </div>
 
               <p class="text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
@@ -105,10 +123,16 @@
               </p>
         </section>
 
+        <!-- start of paw print-->
+        <div class="paw-print2">
+            <i class="fas fa-paw"></i>
+        </div>
+        <!-- end of paw print-->
+
         <section id="best-section">
-           <div class="container">
+           <div class="container text-center">
             <h2>Why We Are The Best</h2>
-                <div class="row">
+                <div class="row d-flex justify-content-center">
                     <div class=" col-lg-4 best-text-section">
                         <div class="icon">
                             <i class="fas fa-concierge-bell"></i>
