--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>The Pet Shop</title>
+    <title>The Pet Shop | Fury Friends For Everyone</title>
 </head>
 <body>
     <!-- start header section -->
@@ -53,23 +53,8 @@
     </header>
 
     <main>
-        <section id="feature-section" class="container">
+        <section id="feature-section" class="container text-center">
             <h2>Our Featured Pets</h2>
-            <!-- <div class="container">
-                <div class="row justify-content-around text-center">
-                    <div class="col-lg-4">
-                        <a class="cta" href="#">Dogs</a>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <a class="cta" href="#">Cats</a>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <a class="cta" href="#">Birds</a>
-                    </div>
-                </div>
-            </div> -->
 
             <!-- start of paw print-->
             <div class="paw-print">
@@ -117,10 +102,12 @@
                 </a>
             </div>
 
-              <p class="text-center">
+              <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
                   Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
               </p>
+
+              <a class="cta" href="#">Learn More</a>
         </section>
 
         <!-- start of paw print-->
@@ -130,15 +117,16 @@
         <!-- end of paw print-->
 
         <section id="best-section">
+           <h2>Why We Are The Best</h2>
+
            <div class="container text-center">
-            <h2>Why We Are The Best</h2>
                 <div class="row d-flex justify-content-center">
                     <div class=" col-lg-4 best-text-section">
                         <div class="icon">
                             <i class="fas fa-concierge-bell"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
                         </p>
                     </div>
                     <div class="col-lg-4 best-text-section">
@@ -146,7 +134,7 @@
                             <i class="fas fa-dollar-sign"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
                         </p>
                     </div>
                     <div class="col-lg-4 best-text-section">
@@ -154,7 +142,32 @@
                             <i class="fas fa-stethoscope"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab, quasi velit quis temporibus mollitia expedita voluptatem perferendis.
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                        </p>
+                    </div>
+
+                    <div class=" col-lg-4 best-text-section">
+                        <div class="icon">
+                            <i class="fas fa-concierge-bell"></i>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                        </p>
+                    </div>
+                    <div class="col-lg-4 best-text-section">
+                        <div class="icon">
+                            <i class="fas fa-dollar-sign"></i>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                        </p>
+                    </div>
+                    <div class="col-lg-4 best-text-section">
+                        <div class="icon">
+                            <i class="fas fa-stethoscope"></i>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
                         </p>
                     </div>
                 </div>
@@ -164,27 +177,30 @@
         <section id="offer-section">
             <h2>We Also Offer</h2>
             <div class="container">
-                <div class="row">
+                <div class="row text-center d-flex just">
                     <div class="offer-img col-lg-4">
                         <img class="img-fluid" src="img/grooming.png" alt="scissors icon">
+                        <h3>Grooming Services</h3>
                     </div>
 
                     <div class="offer-img col-lg-4">
                         <img src="img/training.png" alt="graduation cap">
+                        <h3>Training Services</h3>
                     </div>
 
                     <div class="offer-img col-lg-4">
                         <img src="img/veterinary.png" alt="first aid kit">
+                        <h3>Veterinary Services</h3>
                     </div>
                 </div>
             </div>
         </section>
 
         <section id="location-section">
+            <h2>Location</h2>
             <div class="container">
-                <h2>Location</h2>
-                <div class="row d-flex justify-content-around">
-                    <div class="col-lg-4">
+                <div class="row">
+                    <div class="col-lg-4 d-flex justify-content-center">
                         <p>
                             <i class="fas fa-map-marker-alt"></i>
                             <strong>555 Bruce way</strong><br>
@@ -197,7 +213,7 @@
                         </p>
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 d-flex justify-content-center">
                         <p>
                             <i class="fas fa-map-marker-alt"></i>
                             <strong>555 Bruce way</strong><br>
@@ -209,7 +225,7 @@
                             Sunday: Closed
                         </p>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 d-flex justify-content-center">
                         <p>
                             <i class="fas fa-map-marker-alt"></i>
                             <strong>555 Bruce way</strong><br>
@@ -225,11 +241,32 @@
             </div>
         </section>
     </main>
-    
 
+    <footer class="">
+        <div class="container">
+            <div class="row">
+               <div class="col-lg-4">
+                <a class="navbar-brand" href="#">The Pet Sh<span><i class="fas fa-paw"></i></span>p</a>
+               </div>
+        
 
+            <div class="col-lg-4 d-flex justify-content-center">
+                <form action="">
+                    <!-- <label for="">Stay Connected!</label> -->
+                    <input type="email">
+                    <a href="#">Submit</a>
+                </form>
+            </div>
 
-
+            <div class="col-lg-4 d-flex justify-content-center">
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
