--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Shop</a>
+                        <a class="nav-link" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">About</a>
@@ -63,7 +63,7 @@
             </div>
             <!-- end of paw print-->
 
-            <!-- carousel -->
+            <!-- start of featured pet section -->
             <div class="container">
                 <div class="featured-pet-img">
                     <img src="img/alan.jpg" alt="dog with yellow hat on">
@@ -125,7 +125,7 @@
                     </div>
                     <div class="col-lg-4 best-text-section">
                         <div class="icon">
-                            <i class="fas fa-stethoscope"></i>
+                            <i class="far fa-calendar-alt"></i>
                         </div>
                         <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
@@ -134,7 +134,7 @@
 
                     <div class=" col-lg-4 best-text-section">
                         <div class="icon">
-                            <i class="fas fa-concierge-bell"></i>
+                            <i class="fas fa-shipping-fast"></i>
                         </div>
                         <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
@@ -142,7 +142,7 @@
                     </div>
                     <div class="col-lg-4 best-text-section">
                         <div class="icon">
-                            <i class="fas fa-dollar-sign"></i>
+                            <i class="fas fa-briefcase-medical"></i>
                         </div>
                         <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
@@ -150,7 +150,7 @@
                     </div>
                     <div class="col-lg-4 best-text-section">
                         <div class="icon">
-                            <i class="fas fa-stethoscope"></i>
+                            <i class="fas fa-bone"></i>
                         </div>
                         <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
