update shop page

--- a/shop.html
+++ b/shop.html
@@ -54,12 +54,130 @@
 
     <main>
         <div class="container brands">
+            <h2>Brands We Love</h2>
             <div class="row">
-                <div>
-                    <img src="" alt="">
+                <div class="col-lg-2 d-flex justify-content-center">
+                    <img src="img/BRLOGO-NaturesVariety.png" alt="instinct logo">
+                </div>
+
+                <div class="col-lg-2 d-flex justify-content-center"> 
+                    <img src="img/BRLOGO-Nutro.png" alt="nutro logo">
+                </div>
+
+                <div class="col-lg-2 d-flex justify-content-center">
+                    <img src="img/BRLOGO-PurinaFancy.png" alt="purina fancy feast logo">
+                </div>
+
+                <div class="col-lg-2 d-flex justify-content-center">
+                    <img src="img/BRLOGO-PurinaFriskies.png" alt="purina friskies logo">
+                </div>
+
+                <div class="col-lg-2 d-flex justify-content-center">
+                    <img src="img/BRLOGO-ScienceDiet.png" alt="hill's science diet logo">
+                </div>
+
+                <div class="col-lg-2 d-flex justify-content-center">
+                    <img src="img/BRLOGO.png" alt="blue logo">
                 </div>
             </div>
         </div>
+
+        <section class="shopping">
+            <!-- <div class="side-navbar">
+                <h4>Categories</h4>
+                <ul>
+                    <li>
+                        <a href="#">All</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop By Dogs</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop By Cats</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop By Birds</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop By Fish</a>
+                    </li>
+                    <li>
+                        <a href="#">Supplies</a>
+                    </li>
+                </ul>
+            </div> -->
+
+            <div class="shopping-products container">
+                <h2>Shop</h2>
+                <div class="row">
+                    <div class="prouduct col-lg-3 mb-4">
+                        <img src="img/cat-food1.jpeg" alt="">
+                        <h3>Purina Friskies Classic Paté Cat Food 5.5oz</h3>
+                        <p>
+                            <strong>$0.56</strong> <a href="#">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="prouduct col-lg-3 mb-4">
+                        <img src="img/cat-food2.jpeg" alt="">
+                        <h3>Hill's® Science Diet Indoor Adult Cat Food - Chicken</h3>
+                        <p>
+                            <strong>$40.99</strong> <a href="#">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="prouduct col-lg-3 mb-4">
+                        <img src="img/dog-food1.jpeg" alt="">
+                        <h3>Milk-Bone Original Large Biscuit Dog Treats</h3>
+                        <p>
+                            <strong>$13.97</strong> <a href="#">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="prouduct col-lg-3 mb-4">
+                        <img src="img/dog-food2.jpeg" alt="">
+                        <h3>Purina Beggin' Strips Dog Treat - Bacon</h3>
+                        <p>
+                            <strong>$10.99</strong> <a href="#">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="prouduct col-lg-3 mb-4">
+                        <img src="img/cat-food1.jpeg" alt="">
+                        <h3>Purina Friskies Classic Paté Cat Food 5.5oz</h3>
+                        <p>
+                            <strong>$0.56</strong> <a href="#">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="prouduct col-lg-3 mb-4">
+                        <img src="img/cat-food2.jpeg" alt="">
+                        <h3>Hill's® Science Diet Indoor Adult Cat Food - Chicken</h3>
+                        <p>
+                            <strong>$40.99</strong> <a href="#">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="prouduct col-lg-3 mb-4">
+                        <img src="img/dog-food1.jpeg" alt="">
+                        <h3>Milk-Bone Original Large Biscuit Dog Treats</h3>
+                        <p>
+                            <strong>$13.97</strong> <a href="#">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="prouduct col-lg-3 mb-4">
+                        <img src="img/dog-food2.jpeg" alt="">
+                        <h3>Purina Beggin' Strips Dog Treat - Bacon</h3>
+                        <p>
+                            <strong>$10.99</strong> <a href="#">Add to Cart</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 </body>
 </html>
