--- a/shop.html
+++ b/shop.html
@@ -80,8 +80,9 @@
                     <img src="img/BRLOGO.png" alt="blue logo">
                 </div>
             </div>
+            <hr>
         </div>
-
+       
         <section class="shopping">
             <!-- <div class="side-navbar">
                 <h4>Categories</h4>
@@ -110,74 +111,145 @@
             <div class="shopping-products container">
                 <h2>Shop</h2>
                 <div class="row">
-                    <div class="prouduct col-lg-3 mb-4">
-                        <img src="img/cat-food1.jpeg" alt="">
+                    <div class="product col-lg-3">
+                        <img src="img/cat-food1.jpeg" alt="" class="img-fluid mb-4">
                         <h3>Purina Friskies Classic Paté Cat Food 5.5oz</h3>
                         <p>
-                            <strong>$0.56</strong> <a href="#">Add to Cart</a>
+                            <strong>$0.56</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
                     </div>
 
-                    <div class="prouduct col-lg-3 mb-4">
-                        <img src="img/cat-food2.jpeg" alt="">
-                        <h3>Hill's® Science Diet Indoor Adult Cat Food - Chicken</h3>
+                    <div class="product col-lg-3">
+                        <img src="img/cat-food2.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>Hill's Science Diet Indoor Adult Cat Food - Chicken</h3>
                         <p>
-                            <strong>$40.99</strong> <a href="#">Add to Cart</a>
+                            <strong>$40.99</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
                     </div>
 
-                    <div class="prouduct col-lg-3 mb-4">
-                        <img src="img/dog-food1.jpeg" alt="">
+                    <div class="product col-lg-3">
+                        <img src="img/dog-food1.jpeg" alt="" class="img-fluid mb-4">
                         <h3>Milk-Bone Original Large Biscuit Dog Treats</h3>
                         <p>
-                            <strong>$13.97</strong> <a href="#">Add to Cart</a>
+                            <strong>$13.97</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
                     </div>
 
-                    <div class="prouduct col-lg-3 mb-4">
-                        <img src="img/dog-food2.jpeg" alt="">
+                    <div class="product col-lg-3">
+                        <img src="img/dog-food2.jpeg" alt="" class="img-fluid mb-4">
                         <h3>Purina Beggin' Strips Dog Treat - Bacon</h3>
                         <p>
-                            <strong>$10.99</strong> <a href="#">Add to Cart</a>
+                            <strong>$10.99</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
                     </div>
 
-                    <div class="prouduct col-lg-3 mb-4">
-                        <img src="img/cat-food1.jpeg" alt="">
-                        <h3>Purina Friskies Classic Paté Cat Food 5.5oz</h3>
+                    <div class="product col-lg-3">
+                        <img src="img/dog-food3.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>Simply Nourish - Natural, Chicken & Brown Rice</h3>
                         <p>
-                            <strong>$0.56</strong> <a href="#">Add to Cart</a>
+                            <strong>$41.99</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
                     </div>
 
-                    <div class="prouduct col-lg-3 mb-4">
-                        <img src="img/cat-food2.jpeg" alt="">
-                        <h3>Hill's® Science Diet Indoor Adult Cat Food - Chicken</h3>
+                    <div class="product col-lg-3">
+                        <img src="img/dog-food4.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>Instinct Frozen Raw Dog Food - Natural, Grain Free, Raw</h3>
                         <p>
-                            <strong>$40.99</strong> <a href="#">Add to Cart</a>
+                            <strong>$17.99</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
                     </div>
 
-                    <div class="prouduct col-lg-3 mb-4">
-                        <img src="img/dog-food1.jpeg" alt="">
-                        <h3>Milk-Bone Original Large Biscuit Dog Treats</h3>
+                    <div class="product col-lg-3">
+                        <img src="img/dog-house.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>Trixie Pet Products Dog's Inn Dog House</h3>
                         <p>
-                            <strong>$13.97</strong> <a href="#">Add to Cart</a>
+                            <strong>$178.97</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
                     </div>
 
-                    <div class="prouduct col-lg-3 mb-4">
-                        <img src="img/dog-food2.jpeg" alt="">
-                        <h3>Purina Beggin' Strips Dog Treat - Bacon</h3>
+                    <div class="product col-lg-3">
+                        <img src="img/dog-house2.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>Petmate Top Load Pet Carrier</h3>
                         <p>
-                            <strong>$10.99</strong> <a href="#">Add to Cart</a>
+                            <strong>$32.95</strong> <a href="#" class="ml-4">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="product col-lg-3">
+                        <img src="img/cat-litter1.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>Litter Genie™ Plus Cat Litter Disposal System</h3>
+                        <p>
+                            <strong>$17.99</strong> <a href="#" class="ml-4">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="product col-lg-3">
+                        <img src="img/cat-litter2.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>Great Choice® Classic Clay Cat Litter - Non-Clumping</h3>
+                        <p>
+                            <strong>$8.99</strong> <a href="#" class="ml-4">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="product col-lg-3">
+                        <img src="img/cat-play1.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>SmartCat Cat Scratcher</h3>
+                        <p>
+                            <strong>$49.97</strong> <a href="#" class="ml-4">Add to Cart</a>
+                        </p>
+                    </div>
+
+                    <div class="product col-lg-3">
+                        <img src="img/cat-bed1.jpeg" alt="" class="img-fluid mb-4">
+                        <h3>PetPals Round Basket Cat Bed</h3>
+                        <p>
+                            <strong>$33.99</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
                     </div>
                 </div>
             </div>
         </section>
-
-
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+               <div class="col-lg-3">
+                <a class="navbar-brand" href="#">The Pet Sh<span><i class="fas fa-paw"></i></span>p</a>
+               </div>
+
+                <div class="col-lg-6 d-flex justify-content-center">
+                <form action="">
+                    <input type="email" placeholder="Stay Connected!">
+                    <a href="#" class="cta">Submit</a>
+                </form>
+                </div>
+
+                <div class="col-lg-3 d-flex justify-content-center">
+                <div class="social-icons">
+                    <i class="fab fa-instagram"></i>
+                </div>
+
+                <div class="social-icons">
+                    <i class="fab fa-facebook-f"></i>
+                </div>
+
+                <div class="social-icons">
+                    <i class="fab fa-twitter"></i>
+                </div>
+                
+                <div class="social-icons">
+                    <i class="fab fa-youtube"></i>
+                </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
